--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cocoethtoken",
-  "homepage":"https://coco-frens.github.io/coco-frens",
+  "homepage": "https://coco-frens.github.io/coco-frens",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,9 +13,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
+    "ethers": "^6.7.1",
     "gh-pages": "^6.0.0",
+    "js-big-decimal": "^2.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-final-form": "^6.5.9",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.16.0",
+    "wagmi": "^1.4.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
