--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "bootstrap": "^5.3.2",
     "ethers": "^6.7.1",
     "gh-pages": "^6.0.0",
     "js-big-decimal": "^2.0.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-final-form": "^6.5.9",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
+    "react-tooltip": "^5.21.5",
     "wagmi": "^1.4.3"
   },
   "devDependencies": {
