--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-tooltip": "^5.21.5",
+    "reselect": "^4.1.8",
     "wagmi": "^1.4.3"
   },
   "devDependencies": {
